--- a/waifu.css
+++ b/waifu.css
@@ -6,20 +6,20 @@
 	cursor: pointer;
 	font-size: 12px;
 	right: 0;
-	margin-left: -100px;
+	margin-right: -100px;
 	padding: 5px 2px 5px 5px;
 	position: fixed;
-	transition: margin-left 1s;
+	transition: margin-right 1s;
 	width: 60px;
 	writing-mode: vertical-rl;
 }
 
 #waifu-toggle.waifu-toggle-active {
-	margin-left: -50px;
+	margin-right: -50px;
 }
 
 #waifu-toggle.waifu-toggle-active:hover {
-	margin-left: -30px;
+	margin-right: -30px;
 }
 
 #waifu {
@@ -27,7 +27,7 @@
 	right: 0;
 	line-height: 0;
 	margin-bottom: -10px;
-	position: right;
+	position: fixed;
 	transform: translateY(3px);
 	transition: transform .3s ease-in-out, bottom 3s ease-in-out;
 	z-index: 1;
